# RubiksCubeSolver

./: BFSSolver.h  CMakeLists.txt  DFSSolver.h  GenericRubiksCube.cpp  GenericRubiksCube.h  IDAstarSolver.h  IDDFS.h  README.md  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitboard.cpp  main.cpp
PatternDataBase/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDataBase.cpp  CornerPatternDataBase.h  NibbleArray.cpp  NibbleArray.h  PatternDataBase.cpp  PatternDataBase.h  PermutationIndexer.h  math.cpp  math.h
